This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
1/12/21: Echo in scripts will now preserve indentation. There are now variables
defined with the script name and long name.

1/10/21: Expanded ability to hide dialog elements and made it possible to
close up empty space in control panels after hiding.

1/8/21: Made various normalizations happen after a mag change on a JEOL if
appropriate lens change sequences are defined for each relevant type.

1/8/21: Fixed projector normalization when changing mag, broken 12/16.

1/8/21: Fixed beam autocenter intensity being set to current trial value when
dialog is opened or Trial is gone to with scope tracking on, broken 12/15.

1/8/21: Added script commands EchoNoVarSub to echo without variable
substitutions, ReportEnvironVar to get an environment variable, and
ReportSettingsFile and ReportSettingsFile.

1/5/21: Fixed RunScriptInWatchedDir to work outside the current directory
(In 3.8).

12/31/20: SEM_3-8-6
12/31/20: Fixed when the Multiple Record center shot is taken (after
vs. before), broken 6/3/20 (In 3.8).

12/30/20: Fixed orientation of drawn circles for multiple Records in a hole to
match what will be taken (In 3.8).

12/27/20: Added ability to do rough eucentricity with Search area.

12/23/20: Added script command to set a PLA offset between cameras on JEOL
scopes using PLA for image shift, and a camera property to designate cameras
as on or off axis on scopes using IS.

12/16/20: Moved slow lens changes with normalizations into threads so that the
user interface stays responsive during long changes.

12/15/20: Added option to draw tilt axis to Image Display panel and added a
tilt axis line on View/Serach images when defining Trial/Focus areas.

12/14/20: Fixed problem with frames not being saved when aligning whole tilt