@@ -95,6 +95,7 @@ INT_PROP_TEST("InitialDynamicFocusDelay", camera->, StartDynFocusDelay)
 INT_PROP_TEST("DigiScanExtraShotDelay", camera->, DSextraShotDelay)
 INT_PROP_TEST("DigiScanControlBeam", camera->, DScontrolBeam)
 FLOAT_PROP_TEST("DigiScanLineSyncWait", camera->, DSsyncMargin)
+BOOL_PROP_TEST("CameraSetsShareChannelList", camera->, ConsetsShareChannelList)
 BOOL_PROP_TEST("AllowSpectroscopyImages", camera->, AllowSpectroscopyImages)
 INT_PROP_TEST("STEMUnsignedOption", mWinApp->mDocWnd->, STEMunsignOpt)
 FLOAT_PROP_TEST("UnsignedTruncationLimit", mWinApp->mBufferManager->, UnsignedTruncLimit)
