@@ -4321,6 +4321,13 @@
             (default 700 ms).</TD>
         </TR>
         <TR VALIGN="top">
+          <TD>CameraSetsShareChannelList</TD>
+          <TD>Set to 1 to force camera parameter sets for STEM to have the same list of 
+            selected detectors; when the selection is changed in the Camera Setup dialog for 
+            one parameter set, it is copied to the others.&nbsp; This is needed if the STEM 
+            system cannot reliably change detectors without intervention.</TD>
+        </TR>
+        <TR VALIGN="top">
           <TD>ShotTimeToInsertDetector</TD>
           <TD>Exposure time for the dummy image acquisition needed to insert detectors after 
             entering STEM mode with FEI STEM.&nbsp; The default is 3 sec.</TD>
