@@ -3,6 +3,8 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+1/14/21: Changed terminology for STEM in Camera Setup dialog.
+
 1/12/21: Echo in scripts will now preserve indentation. There are now variables
 defined with the script name and long name.
 
